# intentKeeper

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IDEAS.md  LICENSE  MANIFESTO.md  MERGE_CHECKLIST.md  README.md  ROADMAP.md  THREAT_MODEL.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-validation.yml  security.yml
docker/: entrypoint.sh
docs/: architecture.md  benchmark-results.json  model-benchmark.md  usage.md
eval/: run_eval.py  test_set.yaml
extension/: background.js  build.js  content.js  manifest.json  package-lock.json  package.json  styles.css
extension/core/: classifier.js
extension/popup/: popup.html  popup.js
extension/tests/: core.test.js  reddit.oldreddit.test.js  reddit.test.js  setup.js  twitter.test.js  youtube.test.js
scenarios/: intents.yaml
scripts/: benchmark.py  check_version.py  entrypoint.sh
server/: __init__.py  api.py  classifier.py
tests/: __init__.py  test_classifier.py  test_eval.py  test_reddit_adapter.py
tests/eval/: ground_truth.yaml  run_eval.py
